# S3-Htmlbackupviewer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
s3htmlviewer/: decos.py  s3util.py  web.py
s3htmlviewer/views/: __init__.py  auth.py  s3.py
templates/: base.jinja  index.jinja  navbar.jinja
