[tool.poetry]
name = "smpearth-s3htmlviewer"
version = "0.1.0"
description = ""
authors = ["Nadie <iam@nadie.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
clink = "^0.34.0"
flask = "^3.0.0"
gevent = "^23.9.1"
click = "^8.1.7"
python-dotenv = "^1.0.0"
requests-oauthlib = "^1.3.1"
flask-discord = "^0.1.69"
minio = "^7.2.3"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
